1998-08-17  Mario Weilguni <mweilguni@kde.org>

	* fixed a bug in runtest.cpp that caused a segfault (fclose()
	called twice)

1998-08-17  Harri Porten  <porten@tu-harburg.de>

	* main.cpp: added SIGHUP handler that will cleanly disconnect an
	existing connection.

1998-08-09  Harri Porten  <porten@tu-harburg.de>

	* miniterm.cpp: switched to QMenuBar, fixed memory leak

1998-08-08  Harri Porten  <porten@tu-harburg.de>

	* modem.cpp: fixed hangup that occured if the modem power was off.
	hangup() aborts after 2 seconds if it doesn't suceed. 

1998-08-06  Harri Porten  <porten@tu-harburg.de>

	* runtests.cpp: scan up to 100 lines when searching for the
	unwanted 'lock' in /etc/ppp/options and recognize the '#' sign
	to avoid a false alarm
	
1998-08-04  Harri Porten  <porten@tu-harburg.de>

	* fixed replacement for systems without a BSD 4.2 style usleep()
	* modem.cpp: continued to move modem related stuff to modem.cpp.
	The new Modem class is inherited by the Connect-, MiniTerm- and
	ATI-Query Widget for now. This should be way easier to maintain and
	will reduce the binary's size.
	* modeminfo.cpp: cleaned up  
	
1998-08-02  Harri Porten  <porten@tu-harburg.de>

	* opentty(): fixed XON/XOFF flow control
	* closetty(): flush data not read or transmitted
	* main.cpp: enforce killpppd()
	* modem.cpp: moved lockdevice(), unlockdevice() and modemspeed()
	into this newly created file. opentty(), closetty() and hangup()
	should follow soon to let them be shared between widgets.

1998-07-30  Harri Porten  <porten@tu-harburg.de>

	* connect.cpp: take the burden of specifying the modem lock file
	from the user. Just entering the directory should be easier and
	safer. Presets for different systems can be found in kpppconfig.h 

1998-07-29  Harri Porten  <porten@tu-harburg.de>

	* macros.h: replaced remaining MAX with QMAX
	* main.cpp: followed recommendation of the Unix Programming FAQ to
	use _exit() instead of exit() in child processes  
